--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,8 @@ code {
 	height: 100%;
 	max-height: 360px;
 	z-index: 0;
+	left: 0px;
+	top: 0px;
 
 	background-image: url('');
 	background-repeat: no-repeat;
@@ -72,4 +74,9 @@ header.isSticky {
 	color: #3b566e;
 	padding-top: 0;
 	padding-bottom: 0;
+}
+
+table {
+	border: 1px solid #cee1f8;
+	color: #212529;
 }
