--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
 .App {
-	text-align: center;
+	background-image: linear-gradient(var(--bs-main-content-linear-gradient-from) 0,rgba(var(--bs-main-content-linear-gradient-to),0) 85rem);
 }
