--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
 
 body {
 	margin: 0;
-	font-family: Raleway, sans-serif;
+	/* font-family: Raleway, sans-serif; */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
